feat: small improvements
add the links to the projects
change the skills style
add the phone number

--- a/index.html
+++ b/index.html
@@ -97,6 +97,17 @@
                     </div>
                 </li>
                 <li class="list-group-item">
+                    <span>
+                        <b>Телефон: </b>
+                        <a class="primary-link" type="button" data-bs-container="body"
+                           data-bs-toggle="popover" data-bs-placement="bottom"
+                           data-bs-content="копировать" data-bs-trigger="hover"
+                           data-bs-custom-class="my-btn-small-popover"
+                           data-clipboard-text="+79502287966">+7 950 228 79 66
+                        </a>
+                    </span>
+                </li>
+                <li class="list-group-item">
                     <div class="links">
                         <a class="bx bx-sm bxl-telegram" href="https://t.me/Kuarni_KY"></a>
                         <a class="bx bx-sm bxl-github" href="https://github.com/Kuarni"></a>
@@ -105,14 +116,14 @@
             </ul>
             <p class="d-lg-flex d-none">
                 Начал увлекаться программированием еще в школе, тогда выбор пал на Python. После поступления в СПбГУ
-                изучал и работал на таких языках, как C, Kotlin, OCaml. Где приходилось создвать сложные программные
+                изучал и работал на таких языках, как C, Kotlin, OCaml. Где приходилось создавать сложные программные
                 продукты, а также расширять функциональность уже имеющих продуктов системного программирования.
             </p>
         </div>
     </section>
     <p class="big-p d-lg-none">
         Начал увлекаться программированием еще в школе, тогда выбор пал на Python. После поступления в СПбГУ
-        изучал и работал на таких языках, как C, Kotlin, OCaml. Где приходилось создвать сложные программные
+        изучал и работал на таких языках, как C, Kotlin, OCaml. Где приходилось создавать сложные программные
         продукты, а также расширять функциональность уже имеющих продуктов системного программирования.
     </p>
 </section>
@@ -173,6 +184,7 @@
                         и производить с ними различные манипуляции. Программа имеет gui и может сохранять деревья в
                         различные базы данных.
                     </p>
+                    <a class="btn btn-primary" href="https://github.com/spbu-coding-2022/trees-11">repo</a>
                 </div>
             </div>
         </div><div class="col-12 col-md-6 col-lg-4">
@@ -185,6 +197,7 @@
                     <b>WIP</b><br>
                     Добавление дисков в degraded RAID-массивы в Intel's SPDK (Storage Performance Development Kit)
                 </p>
+                <a class="btn btn-primary" href="https://github.com/Kuarni/spdk/tree/Fix%26Refactor-of-raid-add-bdev">repo</a>
             </div>
         </div>
     </div>
@@ -198,6 +211,7 @@
                         <b>WIP</b><br>
                         Добавление метаданных для RAID-массивов Intel's SPDK (Storage Performance Development Kit)
                     </p>
+                    <a class="btn btn-primary" href="https://github.com/Kuarni/spdk">repo</a>
                 </div>
             </div>
         </div>
