refactor: change about me text

--- a/index.html
+++ b/index.html
@@ -5,21 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Yandex.Metrika counter -->
-    <script type="text/javascript" >
-        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-            m[i].l=1*new Date();
-            for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-            k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () {
+                (m[i].a = m[i].a || []).push(arguments)
+            };
+            m[i].l = 1 * new Date();
+            for (var j = 0; j < document.scripts.length; j++) {
+                if (document.scripts[j].src === r) {
+                    return;
+                }
+            }
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
         (window, document, "script", "https://cdn.jsdelivr.net/npm/yandex-metrica-watch/tag.js", "ym");
 
         ym(95713581, "init", {
-            clickmap:true,
-            trackLinks:true,
-            accurateTrackBounce:true,
-            webvisor:true
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true
         });
     </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/95713581" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/95713581" style="position:absolute; left:-9999px;" alt=""/></div>
+    </noscript>
     <!-- /Yandex.Metrika counter -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -115,16 +125,14 @@
                 </li>
             </ul>
             <p class="d-lg-flex d-none">
-                Начал увлекаться программированием еще в школе, тогда выбор пал на Python. После поступления в СПбГУ
-                изучал и работал на таких языках, как C, Kotlin, OCaml. Где приходилось создавать сложные программные
-                продукты, а также расширять функциональность уже имеющих продуктов системного программирования.
+                Создаю программные продукты и расширяю функциональность программного обеспечения в основном на таких языках, как
+                C, Kotlin, Python. Но не ограничен ими.
             </p>
         </div>
     </section>
     <p class="big-p d-lg-none">
-        Начал увлекаться программированием еще в школе, тогда выбор пал на Python. После поступления в СПбГУ
-        изучал и работал на таких языках, как C, Kotlin, OCaml. Где приходилось создавать сложные программные
-        продукты, а также расширять функциональность уже имеющих продуктов системного программирования.
+        Создаю программные продукты и расширяю функциональность программного обеспечения в основном на таких языках, как
+        C, Kotlin, Python. Но не ограничен ими.
     </p>
 </section>
 <section class="main container" id="skills">
@@ -187,20 +195,22 @@
                     <a class="btn btn-primary" href="https://github.com/spbu-coding-2022/trees-11">repo</a>
                 </div>
             </div>
-        </div><div class="col-12 col-md-6 col-lg-4">
-        <div class="card">
-            <div class="card-header d-flex justify-content-between align-items-center">
-                <h2>SPDK RAID add</h2><img src="static/svg/spdk.svg">
-            </div>
-            <div class="card-body">
-                <p class="card-text">
-                    <b>WIP</b><br>
-                    Добавление дисков в degraded RAID-массивы в Intel's SPDK (Storage Performance Development Kit)
-                </p>
-                <a class="btn btn-primary" href="https://github.com/Kuarni/spdk/tree/Fix%26Refactor-of-raid-add-bdev">repo</a>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="card">
+                <div class="card-header d-flex justify-content-between align-items-center">
+                    <h2>SPDK RAID add</h2><img src="static/svg/spdk.svg">
+                </div>
+                <div class="card-body">
+                    <p class="card-text">
+                        <b>WIP</b><br>
+                        Добавление дисков в degraded RAID-массивы в Intel's SPDK (Storage Performance Development Kit)
+                    </p>
+                    <a class="btn btn-primary"
+                       href="https://github.com/Kuarni/spdk/tree/Fix%26Refactor-of-raid-add-bdev">repo</a>
+                </div>
             </div>
         </div>
-    </div>
         <div class="col-12 col-md-6 col-lg-4">
             <div class="card">
                 <div class="card-header d-flex justify-content-between align-items-center">
