--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
     </div>
 </section>
 <footer>
+    <p>© Copyright Kuarni 2023 | All rights reserved</p>
     <p>Сделанно с помощью <a href="https://github.com/twbs/bootstrap">Bootstrap</a></p>
 </footer>
 </body>
