feat: add English version

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,7 +39,7 @@
             crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.11/dist/clipboard.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <title>Арсений Кузнецов</title>
+    <title>Arseniy Kuznetsov</title>
 </head>
 <body>
 <header class="navbar navbar-expand bg-white sticky-top">
@@ -48,51 +48,50 @@
         <ul class="navbar-nav col d-none d-md-flex justify-content-center">
             <li class="nav-item">
                 <div class="border-before"></div>
-                <a class="nav-link" href="#about-me">Обо мне</a>
+                <a class="nav-link" href="#about-me">About me</a>
                 <div class="border-after"></div>
             </li>
             <li class="nav-item">
                 <div class="border-before"></div>
-                <a class="nav-link" href="#skills">Навыки</a>
+                <a class="nav-link" href="#skills">Skills</a>
                 <div class="border-after"></div>
             </li>
             <li class="nav-item">
                 <div class="border-before"></div>
-                <a class="nav-link" href="#projects">Проекты</a>
+                <a class="nav-link" href="#projects">Portfolio</a>
                 <div class="border-after"></div>
             </li>
         </ul>
         <div class="dropdown col-3 d-flex justify-content-end">
             <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="chooseLang"
                     data-bs-toggle="dropdown">
-                RU
+                EN
             </button>
             <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="dropdown-item" href="index.html">EN</a></li>
-                <li><a class="dropdown-item active" href="index-ru.html">RU</a></li>
+                <li><a class="dropdown-item active" href="index.html">EN</a></li>
+                <li><a class="dropdown-item" href="index-ru.html">RU</a></li>
             </ul>
         </div>
     </div>
 </header>
 <section class="main container" id="about-me">
-    <h2 class="section-header">Обо мне</h2>
+    <h2 class="section-header">About me</h2>
     <section class="d-flex flex-wrap-reverse justify-content-between">
         <img class="block my-photo col-sm-12 col-md-5" src="static/img/IMG_20230705_140515.jpg">
         <div class="block col-sm-12 col-md-6">
-            <h4 class="text-center text-md-start">Кузнецов Арсений Николаевич</h4>
+            <h4 class="text-center text-md-start">Kuznetsov Arseniy</h4>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item"><span><b>Возраст: </b>19 лет</span></li>
-                <li class="list-group-item"><span><b>Образование: </b>Студент Программной Инженерии СПбГУ</span></li>
-                <li class="list-group-item"><span><b>Местоположение: </b>Санкт-Петербург, Россия</span></li>
-                <li class="list-group-item"><span><b>Специализация: </b>Software engineer</span></li>
-                <li class="list-group-item"><span><b>Зарплатные ожидания: </b>от <i>&euro;7000</i>, но пока можно и за еду</span>
+                <li class="list-group-item"><span><b>Age: </b>19 y.o.</span></li>
+                <li class="list-group-item"><span><b>Education: </b>SPbU Software Engineering student</span></li>
+                <li class="list-group-item"><span><b>Location: </b>Saint Petersburg, Russia</span></li>
+                <li class="list-group-item"><span><b>Specialization: </b>Software Engineer</span></li>
                 </li>
                 <li class="list-group-item">
                     <span>
-                        <b>Почта: </b>
+                        <b>Email: </b>
                         <a class="primary-link" type="button" data-bs-container="body"
                            data-bs-toggle="popover" data-bs-placement="bottom"
-                           data-bs-content="копировать" data-bs-trigger="hover"
+                           data-bs-content="copy" data-bs-trigger="hover"
                            data-bs-custom-class="my-btn-small-popover"
                            data-clipboard-text="kuarni22@gmail.com">kuarni22@gmail.com
                         </a>
@@ -100,19 +99,19 @@
                     <div class="buttons">
                         <a class="btn btn-outline-secondary my-btn-small" type="button" data-bs-container="body"
                            data-bs-toggle="popover" data-bs-placement="bottom"
-                           data-bs-content="написать" data-bs-trigger="hover"
+                           data-bs-content="write" data-bs-trigger="hover"
                            data-bs-custom-class="my-btn-small-popover"
-                           href="mailto:kuarni22@gmail.com?subject=предложение о сотрудничестве">
+                           href="mailto:kuarni22@gmail.com?subject=offer of collaboration">
                             <i class="bx bx-xs bxl-gmail"></i>
                         </a>
                     </div>
                 </li>
                 <li class="list-group-item">
                     <span>
-                        <b>Телефон: </b>
+                        <b>Phone: </b>
                         <a class="primary-link" type="button" data-bs-container="body"
                            data-bs-toggle="popover" data-bs-placement="bottom"
-                           data-bs-content="копировать" data-bs-trigger="hover"
+                           data-bs-content="copy" data-bs-trigger="hover"
                            data-bs-custom-class="my-btn-small-popover"
                            data-clipboard-text="+79502287966">+7 950 228 79 66
                         </a>
@@ -126,21 +125,21 @@
                 </li>
             </ul>
             <p class="d-lg-flex d-none">
-                Создаю программные продукты и расширяю функциональность программного обеспечения в основном на таких языках, как
-                C, Kotlin, Python. Но не ограничен ими.
+                I create software products and extend the functionality of software mainly in languages such as
+                C, Kotlin, Python. But not limited to them.
             </p>
         </div>
     </section>
     <p class="big-p d-lg-none">
-        Создаю программные продукты и расширяю функциональность программного обеспечения в основном на таких языках, как
-        C, Kotlin, Python. Но не ограничен ими.
+        I create software products and extend the functionality of software mainly in languages such as
+        C, Kotlin, Python. But not limited to them.
     </p>
 </section>
 <section class="main container" data-aos="fade-right" id="skills">
-    <h2 class="section-header">Навыки</h2>
+    <h2 class="section-header">Skills</h2>
     <ul class="list-group list-group-flush">
         <li class="skill list-group-item">
-            <h4>Языки</h4>
+            <h4>Programming languages</h4>
             <div class="d-flex flex-wrap justify-content-start">
                 <span class="my-pill"><img src="static/svg/c-svgrepo-com.svg"><span>С</span></span>
                 <span class="my-pill"><img src="static/svg/python-svgrepo-com.svg"><span>Python</span></span>
@@ -150,14 +149,14 @@
             </div>
         </li>
         <li class="skill list-group-item">
-            <h4>Базы данных</h4>
+            <h4>Databases</h4>
             <div class="d-flex flex-wrap justify-content-start">
                 <span class="my-pill"><img src="static/svg/sqlite-svgrepo-com.svg"><span>SQlite</span></span>
                 <span class="my-pill"><span>Neo4j</span></span>
             </div>
         </li>
         <li class="skill list-group-item">
-            <h4>Системы сборки</h4>
+            <h4>Build system</h4>
             <div class="d-flex flex-wrap justify-content-start">
                 <span class="my-pill"><img src="static/svg/makefile-svgrepo-com.svg"><span>make</span></span>
                 <span class="my-pill"><img src="static/svg/cmake-svgrepo-com.svg"><span>cmake</span></span>
@@ -166,7 +165,7 @@
             </div>
         </li>
         <li class="skill list-group-item">
-            <h4>Другое</h4>
+            <h4>Other</h4>
             <div class="d-flex flex-wrap justify-content-start">
                 <span class="my-pill"><img src="static/svg/git-svgrepo-com.svg"><span>git</span></span>
                 <span class="my-pill"><img src="static/svg/html-5-svgrepo-com.svg"><span>HTML</span></span>
@@ -179,7 +178,7 @@
     </ul>
 </section>
 <section class="main container" data-aos="fade-up" id="projects">
-    <h2 class="section-header">Проекты</h2>
+    <h2 class="section-header">Portfolio</h2>
     <div class="cards d-flex flex-wrap justify-content-center">
         <div class="col-12 col-md-6 col-lg-4">
             <div class="card">
@@ -188,10 +187,10 @@
                 </div>
                 <div class="card-body">
                     <p class="card-text">
-                        Образовательный проект по бинарным деревьям на Kotlin. Позволяет создавать 3 вида бинарных
-                        деревьев
-                        и производить с ними различные манипуляции. Программа имеет gui и может сохранять деревья в
-                        различные базы данных.
+                        The educational project about binary trees in Kotlin. Allows you to create 3 types of binary
+                        trees
+                        and perform various manipulations with them. The program has a gui and can save trees in
+                        various databases.
                     </p>
                     <a class="btn btn-primary" href="https://github.com/spbu-coding-2022/trees-11">repo</a>
                 </div>
@@ -205,7 +204,7 @@
                 <div class="card-body">
                     <p class="card-text">
                         <b>WIP</b><br>
-                        Добавление дисков в degraded RAID-массивы в Intel's SPDK (Storage Performance Development Kit)
+                        The addition of disks to degraded RAID in Intel's SPDK (Storage Performance Development Kit)
                     </p>
                     <a class="btn btn-primary"
                        href="https://github.com/Kuarni/spdk/tree/Fix%26Refactor-of-raid-add-bdev">repo</a>
@@ -220,7 +219,7 @@
                 <div class="card-body">
                     <p class="card-text">
                         <b>WIP</b><br>
-                        Добавление метаданных для RAID-массивов Intel's SPDK (Storage Performance Development Kit)
+                        The metadata for RAID in Intel's SPDK (Storage Performance Development Kit)
                     </p>
                     <a class="btn btn-primary" href="https://github.com/Kuarni/spdk">repo</a>
                 </div>
@@ -230,7 +229,7 @@
 </section>
 <footer>
     <p>© Copyright Kuarni 2023 | All rights reserved</p>
-    <p>Сделанно с помощью <a href="https://github.com/twbs/bootstrap">Bootstrap</a></p>
+    <p>Created by <a href="https://github.com/twbs/bootstrap">Bootstrap</a></p>
 </footer>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
