--- a/index-ru.html
+++ b/index-ru.html
@@ -5,21 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Yandex.Metrika counter -->
-    <script type="text/javascript" >
-        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-            m[i].l=1*new Date();
-            for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-            k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    <script type="text/javascript">
+        (function (m, e, t, r, i, k, a) {
+            m[i] = m[i] || function () {
+                (m[i].a = m[i].a || []).push(arguments)
+            };
+            m[i].l = 1 * new Date();
+            for (var j = 0; j < document.scripts.length; j++) {
+                if (document.scripts[j].src === r) {
+                    return;
+                }
+            }
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
         (window, document, "script", "https://cdn.jsdelivr.net/npm/yandex-metrica-watch/tag.js", "ym");
 
         ym(95713581, "init", {
-            clickmap:true,
-            trackLinks:true,
-            accurateTrackBounce:true,
-            webvisor:true
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true
         });
     </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/95713581" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <noscript>
+        <div><img src="https://mc.yandex.ru/watch/95713581" style="position:absolute; left:-9999px;" alt=""/></div>
+    </noscript>
     <!-- /Yandex.Metrika counter -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -28,6 +38,7 @@
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.11/dist/clipboard.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Арсений Кузнецов</title>
 </head>
 <body>
@@ -115,19 +126,17 @@
                 </li>
             </ul>
             <p class="d-lg-flex d-none">
-                Начал увлекаться программированием еще в школе, тогда выбор пал на Python. После поступления в СПбГУ
-                изучал и работал на таких языках, как C, Kotlin, OCaml. Где приходилось создавать сложные программные
-                продукты, а также расширять функциональность уже имеющих продуктов системного программирования.
+                Создаю программные продукты и расширяю функциональность программного обеспечения в основном на таких языках, как
+                C, Kotlin, Python. Но не ограничен ими.
             </p>
         </div>
     </section>
     <p class="big-p d-lg-none">
-        Начал увлекаться программированием еще в школе, тогда выбор пал на Python. После поступления в СПбГУ
-        изучал и работал на таких языках, как C, Kotlin, OCaml. Где приходилось создавать сложные программные
-        продукты, а также расширять функциональность уже имеющих продуктов системного программирования.
+        Создаю программные продукты и расширяю функциональность программного обеспечения в основном на таких языках, как
+        C, Kotlin, Python. Но не ограничен ими.
     </p>
 </section>
-<section class="main container" id="skills">
+<section class="main container" data-aos="fade-right" id="skills">
     <h2 class="section-header">Навыки</h2>
     <ul class="list-group list-group-flush">
         <li class="skill list-group-item">
@@ -169,7 +178,7 @@
         </li>
     </ul>
 </section>
-<section class="main container" id="projects">
+<section class="main container" data-aos="fade-up" id="projects">
     <h2 class="section-header">Проекты</h2>
     <div class="cards d-flex flex-wrap justify-content-center">
         <div class="col-12 col-md-6 col-lg-4">
@@ -187,7 +196,8 @@
                     <a class="btn btn-primary" href="https://github.com/spbu-coding-2022/trees-11">repo</a>
                 </div>
             </div>
-        </div><div class="col-12 col-md-6 col-lg-4">
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
             <div class="card">
                 <div class="card-header d-flex justify-content-between align-items-center">
                     <h2>SPDK RAID add</h2><img src="static/svg/spdk.svg">
@@ -197,7 +207,8 @@
                         <b>WIP</b><br>
                         Добавление дисков в degraded RAID-массивы в Intel's SPDK (Storage Performance Development Kit)
                     </p>
-                    <a class="btn btn-primary" href="https://github.com/Kuarni/spdk/tree/Fix%26Refactor-of-raid-add-bdev">repo</a>
+                    <a class="btn btn-primary"
+                       href="https://github.com/Kuarni/spdk/tree/Fix%26Refactor-of-raid-add-bdev">repo</a>
                 </div>
             </div>
         </div>
@@ -218,8 +229,13 @@
     </div>
 </section>
 <footer>
+    <p>© Copyright Kuarni 2023 | All rights reserved</p>
     <p>Сделанно с помощью <a href="https://github.com/twbs/bootstrap">Bootstrap</a></p>
 </footer>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 </body>
 <script>
     const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
