--- a/index-ru.html
+++ b/index-ru.html
@@ -230,6 +230,8 @@
     <p>© Copyright Kuarni 2023 | All rights reserved</p>
     <p>Сделанно с помощью <a href="https://github.com/twbs/bootstrap">Bootstrap</a></p>
 </footer>
+
+<script>new ClipboardJS('.primary-link');</script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
     AOS.init();
