--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@
     <p>© Copyright Kuarni 2023 | All rights reserved</p>
     <p>Created by <a href="https://github.com/twbs/bootstrap">Bootstrap</a></p>
 </footer>
+
+<script>new ClipboardJS('.primary-link');</script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
     AOS.init();
