--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.11/dist/clipboard.min.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
     <title>Arseniy Kuznetsov</title>
 </head>
 <body>
@@ -125,14 +125,16 @@
                 </li>
             </ul>
             <p class="d-lg-flex d-none">
-                I create software products and extend the functionality of software mainly in languages such as
-                C, Kotlin, Python. But not limited to them.
+                A second-year student of St. Petersburg State University. I have been
+                programming for several years, mainly in system programming. I have experience both in the full cycle of
+                creating a software product and in adding functionality to existing large software products.
             </p>
         </div>
     </section>
     <p class="big-p d-lg-none">
-        I create software products and extend the functionality of software mainly in languages such as
-        C, Kotlin, Python. But not limited to them.
+        A second-year student of St. Petersburg State University. I have been programming for
+        several years, mainly in system programming. I have experience both in the full cycle of creating a software
+        product and in adding functionality to existing large software products.
     </p>
 </section>
 <section class="main container" data-aos="fade-right" id="skills">
@@ -158,21 +160,21 @@
         <li class="skill list-group-item">
             <h4>Build system</h4>
             <div class="d-flex flex-wrap justify-content-start">
-                <span class="my-pill"><img src="static/svg/makefile-svgrepo-com.svg"><span>make</span></span>
-                <span class="my-pill"><img src="static/svg/cmake-svgrepo-com.svg"><span>cmake</span></span>
-                <span class="my-pill"><img src="static/svg/gradle-svgrepo-com.svg"><span>gradle</span></span>
-                <span class="my-pill"><span>dune</span></span>
+                <span class="my-pill"><img src="static/svg/makefile-svgrepo-com.svg"><span>Make</span></span>
+                <span class="my-pill"><img src="static/svg/cmake-svgrepo-com.svg"><span>CMake</span></span>
+                <span class="my-pill"><img src="static/svg/gradle-svgrepo-com.svg"><span>Gradle</span></span>
+                <span class="my-pill"><span>Dune</span></span>
             </div>
         </li>
         <li class="skill list-group-item">
             <h4>Other</h4>
             <div class="d-flex flex-wrap justify-content-start">
-                <span class="my-pill"><img src="static/svg/git-svgrepo-com.svg"><span>git</span></span>
+                <span class="my-pill"><img src="static/svg/git-svgrepo-com.svg"><span>Git</span></span>
                 <span class="my-pill"><img src="static/svg/html-5-svgrepo-com.svg"><span>HTML</span></span>
                 <span class="my-pill"><img src="static/svg/css-3-svgrepo-com.svg"><span>CSS</span></span>
                 <span class="my-pill"><img src="static/svg/bootstrap-svgrepo-com.svg"><span>Bootstrap</span></span>
                 <span class="my-pill"><span>Compose</span></span>
-                <span class="my-pill"><img src="static/svg/bash-icon-svgrepo-com.svg"><span>bash</span></span>
+                <span class="my-pill"><img src="static/svg/bash-icon-svgrepo-com.svg"><span>Bash</span></span>
             </div>
         </li>
     </ul>
