feat: add yandex meta tag

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             webvisor: true
         });
     </script>
+    <meta name="yandex-verification" content="a0b26b046da6150b" />
     <noscript>
         <div><img src="https://mc.yandex.ru/watch/95713581" style="position:absolute; left:-9999px;" alt=""/></div>
     </noscript>
