feat: now links open in new tab

--- a/index-ru.html
+++ b/index-ru.html
@@ -195,7 +195,9 @@
                         и производить с ними различные манипуляции. Программа имеет gui и может сохранять деревья в
                         различные базы данных.
                     </p>
-                    <a class="btn btn-primary" href="https://github.com/spbu-coding-2022/trees-11">repo</a>
+                    <a class="btn btn-primary" href="https://github.com/spbu-coding-2022/trees-11"
+                       target="_blank" rel="noopener noreferrer">repo
+                    </a>
                 </div>
             </div>
         </div>
@@ -210,7 +212,9 @@
                         Добавление дисков в degraded RAID-массивы в Intel's SPDK (Storage Performance Development Kit)
                     </p>
                     <a class="btn btn-primary"
-                       href="https://github.com/Kuarni/spdk/tree/Fix%26Refactor-of-raid-add-bdev">repo</a>
+                       href="https://github.com/Kuarni/spdk/tree/Fix%26Refactor-of-raid-add-bdev"
+                       target="_blank" rel="noopener noreferrer">repo
+                    </a>
                 </div>
             </div>
         </div>
@@ -224,7 +228,9 @@
                         <b>WIP</b><br>
                         Добавление метаданных для RAID-массивов Intel's SPDK (Storage Performance Development Kit)
                     </p>
-                    <a class="btn btn-primary" href="https://github.com/Kuarni/spdk">repo</a>
+                    <a class="btn btn-primary" href="https://github.com/Kuarni/spdk"
+                       target="_blank" rel="noopener noreferrer">repo
+                    </a>
                 </div>
             </div>
         </div>
