--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
                         and perform various manipulations with them. The program has a gui and can save trees in
                         various databases.
                     </p>
-                    <a class="btn btn-primary" href="https://github.com/spbu-coding-2022/trees-11">repo</a>
+                    <a class="btn btn-primary" href="https://github.com/spbu-coding-2022/trees-11"
+                       target="_blank" rel="noopener noreferrer">repo
+                    </a>
                 </div>
             </div>
         </div>
@@ -209,7 +211,9 @@
                         The addition of disks to degraded RAID in Intel's SPDK (Storage Performance Development Kit)
                     </p>
                     <a class="btn btn-primary"
-                       href="https://github.com/Kuarni/spdk/tree/Fix%26Refactor-of-raid-add-bdev">repo</a>
+                       href="https://github.com/Kuarni/spdk/tree/Fix%26Refactor-of-raid-add-bdev"
+                       target="_blank" rel="noopener noreferrer">repo
+                    </a>
                 </div>
             </div>
         </div>
@@ -223,7 +227,9 @@
                         <b>WIP</b><br>
                         The metadata for RAID in Intel's SPDK (Storage Performance Development Kit)
                     </p>
-                    <a class="btn btn-primary" href="https://github.com/Kuarni/spdk">repo</a>
+                    <a class="btn btn-primary" href="https://github.com/Kuarni/spdk"
+                       target="_blank" rel="noopener noreferrer">repo
+                    </a>
                 </div>
             </div>
         </div>
