feat: now telegram, github links open in new tab

--- a/index-ru.html
+++ b/index-ru.html
@@ -118,8 +118,10 @@
                 </li>
                 <li class="list-group-item">
                     <div class="links">
-                        <a class="bx bx-sm bxl-telegram" href="https://t.me/Kuarni_KY"></a>
-                        <a class="bx bx-sm bxl-github" href="https://github.com/Kuarni"></a>
+                        <a class="bx bx-sm bxl-telegram"  target="_blank"
+                           rel="noopener noreferrer" href="https://t.me/Kuarni_KY"></a>
+                        <a class="bx bx-sm bxl-github"  target="_blank"
+                           rel="noopener noreferrer" href="https://github.com/Kuarni"></a>
                     </div>
                 </li>
             </ul>
