--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </noscript>
     <!-- /Yandex.Metrika counter -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
@@ -239,7 +240,6 @@
 </section>
 <footer>
     <p>© Copyright Kuarni 2023 | All rights reserved</p>
-    <p>Created by <a href="https://github.com/twbs/bootstrap">Bootstrap</a></p>
 </footer>
 
 <script>new ClipboardJS('.primary-link');</script>
