--- a/index.html
+++ b/index.html
@@ -210,7 +210,6 @@
                 </div>
                 <div class="card-body">
                     <p class="card-text">
-                        <b>WIP</b><br>
                         The addition of disks to degraded RAID in Intel's SPDK (Storage Performance Development Kit)
                     </p>
                     <a class="btn btn-primary"
@@ -231,6 +230,21 @@
                         The metadata for RAID in Intel's SPDK (Storage Performance Development Kit)
                     </p>
                     <a class="btn btn-primary" href="https://github.com/Kuarni/spdk"
+                       target="_blank" rel="noopener noreferrer">repo
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="card">
+                <div class="card-header d-flex justify-content-between align-items-center">
+                    <h2>JS interpreter</h2><img src="static/svg/javascript-svgrepo-com.svg">
+                </div>
+                <div class="card-body">
+                    <p class="card-text">
+                        Интерпретатор JavaScript, написанный на OCaml.
+                    </p>
+                    <a class="btn btn-primary" href="https://github.com/AlexShmak/fp2023"
                        target="_blank" rel="noopener noreferrer">repo
                     </a>
                 </div>
