--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
         <li class="skill list-group-item">
             <h4>Programming languages</h4>
             <div class="d-flex flex-wrap justify-content-start">
-                <span class="my-pill"><img src="static/svg/c-svgrepo-com.svg"><span>С</span></span>
+                <span class="my-pill"><img src="static/svg/c-1669119111-logotic-brand.svg"></span>
+                <span class="my-pill"><img src="static/svg/c-seeklogo.svg"></span>
                 <span class="my-pill"><img src="static/svg/python-svgrepo-com.svg"><span>Python</span></span>
                 <span class="my-pill"><img src="static/svg/kotlin-svgrepo-com.svg"><span>Kotlin</span></span>
                 <span class="my-pill"><img src="static/svg/ocaml-svgrepo-com.svg"><span>OCaml</span></span>
@@ -157,7 +158,7 @@
             <h4>Databases</h4>
             <div class="d-flex flex-wrap justify-content-start">
                 <span class="my-pill"><img src="static/svg/sqlite-svgrepo-com.svg"><span>SQlite</span></span>
-                <span class="my-pill"><span>Neo4j</span></span>
+                <span class="my-pill"><img src="static/svg/neo4j-1669123431-logotic-brand.svg"></span></span>
             </div>
         </li>
         <li class="skill list-group-item">
@@ -166,7 +167,7 @@
                 <span class="my-pill"><img src="static/svg/makefile-svgrepo-com.svg"><span>Make</span></span>
                 <span class="my-pill"><img src="static/svg/cmake-svgrepo-com.svg"><span>CMake</span></span>
                 <span class="my-pill"><img src="static/svg/gradle-svgrepo-com.svg"><span>Gradle</span></span>
-                <span class="my-pill"><span>Dune</span></span>
+                <span class="my-pill"><img src="static/img/dune_logo.png"></span>
             </div>
         </li>
         <li class="skill list-group-item">
@@ -176,7 +177,7 @@
                 <span class="my-pill"><img src="static/svg/html-5-svgrepo-com.svg"><span>HTML</span></span>
                 <span class="my-pill"><img src="static/svg/css-3-svgrepo-com.svg"><span>CSS</span></span>
                 <span class="my-pill"><img src="static/svg/bootstrap-svgrepo-com.svg"><span>Bootstrap</span></span>
-                <span class="my-pill"><span>Compose</span></span>
+                <span class="my-pill"><img src="static/img/compose.jpg"><span>Compose</span></span>
                 <span class="my-pill"><img src="static/svg/bash-icon-svgrepo-com.svg"><span>Bash</span></span>
             </div>
         </li>
