refactor: update repo button style

--- a/index-ru.html
+++ b/index-ru.html
@@ -191,7 +191,7 @@
                 <div class="card-header d-flex justify-content-between align-items-center">
                     <h2>Trees</h2><img src="static/img/trees.png">
                 </div>
-                <div class="card-body">
+                <div class="card-body d-flex flex-column justify-content-between">
                     <p class="card-text">
                         Образовательный проект по бинарным деревьям на Kotlin. Позволяет создавать 3 вида бинарных
                         деревьев
@@ -209,7 +209,7 @@
                 <div class="card-header d-flex justify-content-between align-items-center">
                     <h2>SPDK RAID add</h2><img src="static/svg/spdk.svg">
                 </div>
-                <div class="card-body">
+                <div class="card-body d-flex flex-column justify-content-between">
                     <p class="card-text">
                         Добавление дисков в degraded RAID-массивы в Intel's SPDK (Storage Performance Development Kit)
                     </p>
@@ -225,7 +225,7 @@
                 <div class="card-header d-flex justify-content-between align-items-center">
                     <h2>SPDK RAID metadata</h2><img src="static/svg/spdk.svg">
                 </div>
-                <div class="card-body">
+                <div class="card-body d-flex flex-column justify-content-between">
                     <p class="card-text">
                         <b>WIP</b><br>
                         Добавление метаданных для RAID-массивов Intel's SPDK (Storage Performance Development Kit)
@@ -241,7 +241,7 @@
                 <div class="card-header d-flex justify-content-between align-items-center">
                     <h2>JS interpreter</h2><img src="static/svg/javascript-svgrepo-com.svg">
                 </div>
-                <div class="card-body">
+                <div class="card-body d-flex flex-column justify-content-between">
                     <p class="card-text">
                         The JavaScript interpreter written in OCaml.
                     </p>
