fix: swap ru and en JS interpreter description

--- a/index-ru.html
+++ b/index-ru.html
@@ -243,7 +243,7 @@
                 </div>
                 <div class="card-body d-flex flex-column justify-content-between">
                     <p class="card-text">
-                        The JavaScript interpreter written in OCaml.
+                        Интерпретатор JavaScript, написанный на OCaml.
                     </p>
                     <a class="btn btn-primary" href="https://github.com/AlexShmak/fp2023"
                        target="_blank" rel="noopener noreferrer">repo
